[gd_scene load_steps=3 format=3 uid="uid://bubble_pop_game"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_game"]
[ext_resource type="PackedScene" uid="uid://bubble_pop_game_ui" path="res://scenes/game_ui.tscn" id="2_ui"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_game")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.12, 0.2, 1)

[node name="EscapeLine" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 140.0
offset_bottom = 155.0
grow_horizontal = 2
color = Color(1, 0.3, 0.3, 0.4)

[node name="BubblesContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EscapedLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 180.0
offset_right = 100.0
offset_bottom = 230.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Escaped: 0/5"
horizontal_alignment = 1

[node name="ComboLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -300.0
offset_right = 100.0
offset_bottom = -250.0
pivot_offset = Vector2(100, 25)
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 32
text = "COMBO x3"
horizontal_alignment = 1

[node name="Legend" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -80.0
offset_right = 300.0
offset_bottom = -30.0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "SMALL +3 | MEDIUM +2 | LARGE +1 | GOLD +10"
horizontal_alignment = 1

[node name="GameUI" parent="." instance=ExtResource("2_ui")]
